isolate sorting algorithms to a single file + initialize visualization

--- a/sorting.ipynb
+++ b/sorting.ipynb
@@ -12,25 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "# import seaborn as sns\n"
+    "# import seaborn as sns\n",
+    "DEBUG_MODE = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[641 310 807 812 879]\n"
+      "[608  87 701 947 114]\n"
      ]
     }
    ],
@@ -39,9 +40,13 @@
     "low = 1\n",
     "high = 1000\n",
     "size = 5  #1000\n",
+    "if DEBUG_MODE == 1: \n",
+    "    np.random.seed(6969) #remove when want completely random #s\n",
     "\n",
     "# low <= randint <= high-1 (aka max = high-1)\n",
     "rand_array = np.random.randint(low, high, size) # random integer\n",
+    " \n",
+    "\n",
     "x = np.arange(0, size, 1) # indices of the rand_array matrix\n",
     "print(rand_array)"
    ]
